--- a/index.html
+++ b/index.html
@@ -34,10 +34,13 @@
   </head>
 
   <body>
-    <div class="d-flex bg-warning">
-      <h1>Hello world</h1>
-      <p>Hi there</p>
-      <i class="fab fa-instagram" aria-hidden="true"></i>
+    <div class="hero">
+      <p>👋 Hello, I'm</p>
+      <h1>Patricia Pereira</h1>
+      <h2 class="mb-3">Front-end developer based in Portugal</h2>
+      <div>
+        <a href="#" class="btn btn-branding">contact me</a>
+      </div>
     </div>
   </body>
 </html>
