--- a/work.html
+++ b/work.html
@@ -32,28 +32,52 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
   </head>
-  <body>
-    <div class="content-container container">
+  <div class="content-container container">
+    <div class="content">
+      <h1 class="mb-5">
+        Take a look at what I've been working on!
+      </h1>
       <div class="row">
-        <div class="col-md-6">
-          <div class="content">
-            <h1 class="mb-4">
-              Hi I am Patricia Pereira
-            </h1>
-            <h2 class="mb-4">Frontend Developer, based in Portugal.</h2>
-            <p class="mb-4">
-              For anyone who wants to start learning code, this workshop is very
-              interesting. You will be challenged with different exercises, and
-              everything is well explained, homework and deadlines are good for
-              keep focus
-            </p>
-            <a href="#" class="btn btn-branding">See my projects</a>
-          </div>
+        <div class="col-md-6 mb-5">
+          <img
+            src="src/cH4m-yogurt.png"
+            class="img-fluid mb-3 rounded"
+            alt=""
+          />
+          <h3 class="text-center text-muted m-0">Yogurt Project</h3>
+          <p>Built with HTML and CSS</p>
         </div>
-        <div class="col-lg-6">
-          <img src="/src/cwgI-patricia.png" alt="" class="image-fluid" />
+
+        <div class="col-md-6 mb-5">
+          <img
+            src="src/jxM9-weather.png"
+            class="img-fluid mb-3 rounded"
+            alt=""
+          />
+          <h3 class="text-center text-muted m-0">Weather Project</h3>
+          <p>Built with HTML, CSS and JavaScript</p>
+        </div>
+        <div class="col-md-6 mb-5">
+          <img
+            src="src/dgHV-dictionary.png"
+            class="img-fluid mb-3 rounded"
+            alt=""
+          />
+          <h3 class="text-center text-muted m-0">Dictionary App</h3>
+          <p>Built with HTML and CSS with React</p>
+        </div>
+
+        <div class="col-md-6 mb-5">
+          <img
+            src="src/AtJ4-translation.png"
+            class="img-fluid mb-3 rounded"
+            alt=""
+          />
+          <h3 class="text-center text-muted m-0">Translation App</h3>
+          <p>Built with HTML, CSS with React</p>
         </div>
       </div>
     </div>
-  </body>
+  </div>
+  <body></body>
 </html>
