commite Final project

--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>portfolio project</title>
+    <meta name="description" content="Mozhdeh is an front end engineer, based in Iran">
+    <title>Front end developer-Mozhdeh Matalebi</title>
+
     <meta charset="UTF-8" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css"
@@ -34,12 +36,28 @@
   </head>
 
   <body>
+      <div class="container">
+    <nav class="d-flex justify-content-between">
+         <ul> <li>
+           Mozhdeh Matalebi</li>
+         </ul>
+         
+           <ul>
+          <li class="active">
+            <a href="/" title="homepage" >Home</a></li>
+          <li><a href="/about.html" title="aboutpage mozhdeh">About</a></li>
+          <li><a href="/work.html" title=" mozhdeh workpage">Work</a></li>
+          <li><a href="/contact.html" title="contactpage mozhdeh">Contact</a></li>
+        </ul>
+      </div>
+    </nav>
+
     <div class="hero">
       <p>👋 Hello, I'm</p>
-      <h1>Patricia Pereira</h1>
-      <h2 class="mb-3">Front-end developer based in Portugal</h2>
+      <h1>Mozhdeh Matalebi</h1>
+      <h2 class="mb-3">Front-end developer based in Iran</h2>
       <div>
-        <a href="#" class="btn btn-branding">contact me</a>
+        <a href="/contact.html"  title="contact me"class="btn btn-branding">contact me</a>
       </div>
     </div>
     <p class="text-center m-5">
@@ -48,18 +66,15 @@
     <div class="container">
       <div class="row mb-5">
         <div class="col d-none d-lg-block">
-          <img src="src/cH4m-yogurt.png" class="img-fluid" alt="" />
+          <img src="src/cH4m-yogurt.png" class="img-fluid" alt="firstProj" />
         </div>
         <div class="col">
           <div class="project-description">
-            <h2 class="mb-5">Yogurt Project</h2>
+            <h2 class="mb-5">Resturant Reservation App</h2>
             <p class="mb-5 text-muted">
-              Far far away, behind the word mountains, far from the countries
-              Vokalia and Consonantia, there live the blind texts. Separated
-              they live in Bookmarksgrove right at the coast of the Semantics, a
-              large language ocean. A small river named Duden flows by
+                Book and enjoy extraordinary dining experiences with this App. Find the right restaurant for anything using our comprehensive and intuitive search filters. See menus, photos, and special promotions, while getting the inside scoop from our community of OpenTable diners. Book your reservation and invite a few friends to tag along, all in just a few taps.
             </p>
-            <a href="#" class="btn btn-branding-outline">learn more </a>
+            <a href="/work.html" class="btn btn-branding-outline" title="more about it">learn more </a>
           </div>
         </div>
       </div>
@@ -68,35 +83,60 @@
           <div class="project-description">
             <h2 class="mb-5">Weather App</h2>
             <p class="mb-5 text-muted">
-              Far far away, behind the word mountains, far from the countries
-              Vokalia and Consonantia, there live the blind texts. Separated
-              they live in Bookmarksgrove right at the coast of the Semantics, a
-              large language ocean. A small river named Duden flows by
+                Weather forecast, which has accurate weather information for anytime and everywhere. Local weather forecast & real time rain, storm, ice & snow reports... By weather information, you can prepare your plan carefully.
             </p>
-            <a href="#" class="btn btn-branding-outline">learn more </a>
+            <a href="/work.html" class="btn btn-branding-outline" title="more about it">learn more </a>
           </div>
         </div>
         <div class="col d-none d-lg-block">
-          <img src="src/jxM9-weather.png" class="img-fluid" alt="" />
+          <img src="src/jxM9-weather.png" class="img-fluid" alt="weatherProj" />
         </div>
       </div>
       <div class="row mb-5">
         <div class="col d-none d-lg-block">
-          <img src="src/dgHV-dictionary.png" class="img-fluid" alt="" />
+          <img src="src/dgHV-dictionary.png" class="img-fluid" alt="dictionaryProj" />
         </div>
         <div class="col">
           <div class="project-description">
-            <h2 class="mb-5">Dictionary App</h2>
+            <h2 class="mb-5">Resume App</h2>
             <p class="mb-5 text-muted">
-              Far far away, behind the word mountains, far from the countries
-              Vokalia and Consonantia, there live the blind texts. Separated
-              they live in Bookmarksgrove right at the coast of the Semantics, a
-              large language ocean. A small river named Duden flows by
+                Here's the thing about resumes and cover letters: No matter how unique you try to make your own, for the most part, they tend to read dry. And there's a good reason for it: It's supposed to be a single, no-frills page that documents your work experience. And while being concise is good, there's very little opportunity to convey your uniqueness, or for your personality to shine through at all for that matter.
             </p>
-            <a href="#" class="btn btn-branding-outline">learn more </a>
+            <a href="/work.html" class="btn btn-branding-outline" title="more about it">learn more </a>
           </div>
         </div>
       </div>
+   
+      <footer>
+        <div class="contact-box justify-content-between mb-5 d-none d-md-flex">
+          <div>
+        <h3>Work inquiry</h3>
+        <p class="text-muted">Lets work together</p>
+          </div>
+        <div>
+        <a href="/contact.html" title="aboutme" class="btn btn-branding">Contact me</a>
+      </div>  
+      </div>
+        <div class="d-flex justify-content-center mb-5"
+        <a href="mailto:patricia@gmail.com>"
+         class="email-link">  Gilda.mti.1990@gmail.com</a>
+        </div>
+         <div class="social-links  d-flex justify-content-center ">
+      <a href="https://www.instagram.com/gilda.mti" title="instagram profile" target="_blank"> <i class="fab fa-instagram"></i></a>
+      <a href="https://github.com/GildaMti" title="github profile" target="_blank"> <i class="fab fa-github"></i> </a>
+      <a href="https://www.facebook.com/gildamti"title="facebook profile" target="_blank"> <i class="fab fa-facebook"></i>
+      </a>
+
+      </div>
+      <p class="text-center mt-4">
+          ✌️This project is coded by Mozhdeh Matalebi and is 
+        <a href="https://github.com/GildaMti/portfolio" title="github profile" target="_blank">
+        open sourced
+        </a>
+      </p>
+          </footer>
+    
     </div>
+
   </body>
 </html>
