--- a/contact.html
+++ b/contact.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-      <meta name="description" content="about mozhdeh matalebi page resume">
-    <title> Mozhdeh Matalebi  - about me</title>
+      <meta name="description" content="contact to Mozhdeh Matalebi">
+    <title>contact Mozhdeh matalebi</title>
     <meta charset="UTF-8" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css"
@@ -35,38 +35,45 @@
   </head>
   <body>
       <div class="container">
-         
-        <nav class="d-flex justify-content-between">
-        <ul>
-          <li> Mozhdeh Matalebi </li>
-                 <a href="/" title="homepage" >
-                 </ul>  
+          <nav class="d-flex justify-content-between">
+               <ul>
+                 <li>
+                   Mozhdeh Matalebi
+                 </li>
+                </ul>
                  <ul>
                 <li >
                   <a href="/" title="homepage" >Home</a></li>
-                <li class="active"><a href="/about.html" title="aboutpage mozhdeh">About</a></li>
+                <li><a href="/about.html" title="aboutpage mozhdeh">About</a></li>
                 <li><a href="/work.html" title=" mozhdeh workpage">Work</a></li>
-                <li><a href="/contact.html" title="contactpage mozhdeh">Contact</a></li>
+                <li class="active"><a href="/contact.html" title="contactpage mozhdeh">Contact</a></li>
               </ul>
             </div>
           </nav>
     <div class="content-container container">
-      <div class="row">
-        <div class="col-md-6">
-          <div class="content">
-            <h1 class="mb-4">
-              Hi I am Mozhdeh Matalebi
-            </h1>
-            <h2 class="mb-4">Frontend Developer, based in Iran.</h2>
-            <p class="mb-4">
-                am originally from the Iran and currently live in Tehran. I have been work as software engineer since 2012. In my free time, I enjoy hiking, practicing in front-end coding skill, and exploring the city by bike.
-            </p>
-            <a href="#" class="btn btn-branding">See my projects</a>
-          </div>
-        </div>
-        <div class="col-lg-6">
-          <img  class="rounded pic" src="/src/cwgI-patricia.png" alt="" class="image-fluid" />
-        </div>
+      <div class="content">
+        <h1 class="mb-5">
+          Lets get in touch!
+        </h1>
+        <h3>
+          Email
+        </h3>
+        <p>
+          <a href="mailto:Gilda.mti.1990@gmail.com" title="email link"> Gilda.mti.1990@gmail.com </a>
+        </p>
+        <h3>
+          Facebook
+        </h3>
+        <p>
+          <a href="https://facebook.com/gildamti"  title="facebook link" target="blank"> @gildamti</a>
+        </p>
+        <h3>
+          instagram
+        </h3>
+
+        <p>
+          <a href="https://instagram.com/gilda.mti" title="instagram link" target="blank"> @gilda.mti</a>
+        </p>
       </div>
     </div>
     <footer class="container">
@@ -80,22 +87,23 @@
       </div>  
       </div>
         <div class="d-flex justify-content-center mb-5"
-        <a href="mailto:Gilda.mti.1990@gmail.com>"
+        <a href="mailto:gilda.mti.1990@gmail.com>"
          class="email-link"> Gilda.mti.1990@gmail.com</a>
         </div>
          <div class="social-links  d-flex justify-content-center ">
             <a href="https://www.instagram.com/gilda.mti" title="instagram profile" target="_blank"> <i class="fab fa-instagram"></i></a>
             <a href="https://github.com/GildaMti" title="github profile" target="_blank"> <i class="fab fa-github"></i> </a>
             <a href="https://www.facebook.com/gildamti"title="facebook profile" target="_blank"> <i class="fab fa-facebook"></i>
-      </a>
-
-      </div>
-      <p class="text-center mt-4">
-          ✌️This project is coded by Mozhdeh Matalebi and is 
-        <a href="https://github.com/GildaMti/portfolio" title="github profile" target="_blank">
-        open sourced
-        </a>
+            </a>
+      
+            </div>
+            <p class="text-center mt-4">
+                ✌️This project is coded by Mozhdeh Matalebi and is 
+              <a href="https://github.com/GildaMti/portfolio" title="github profile" target="_blank">
+              open sourced
+              </a>
       </p>
           </footer>
   </body>
+
 </html>
